<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group  android:checkableBehavior="single">
        <item
            android:id="@+id/messageFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/message"
            android:title="@string/menu_item_message_title" />
        <item android:title="Support">
            <menu>
                <item
                    android:id="@+id/settingsFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/settings"
                    android:title="@string/menu_item_settings_title" />
                <item
                    android:id="@+id/helpFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/help"
                    android:title="@string/menu_item_help_title" />
            </menu>
        </item>

    </group>

</menu>